prusti-tests/tests/parse/ui/composite_fail.stderr
error: found `||` and `&&` in the same subexpression
 --> $DIR/composite_fail.rs:7:17
  |
7 | #[requires(true && true || true)]
  |                 ^^^^^^^^^^

error: expected `&&` or `==>`
  --> $DIR/composite_fail.rs:10:36
   |
10 | #[requires(forall(|a: i32| a == 5) || forall(|a: i32| a == 5))]
   |                                    ^^

error: aborting due to 2 previous errors

